# hplip

./: .cvsignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  __init__.py  aclocal.m4  align.py  check-plugin.py  check.py  clean.py  colorcal.py  configure  configure.in  ctr.py  cups_drv.inc  dat2drv.py  fab.py  foomatic_drv.inc  hpguid.py  hplip-doc.install  hplip-install  hplip.conf  hplip.conf.in  hplip.install  hplip.list.in  hplip.postinst  hplip.sh  hplip_0.8.7.orig.tar.gz.delta  hplip_0.8.7.orig.tar.gz.id  hplip_0.9.1.orig.tar.gz.delta  hplip_0.9.1.orig.tar.gz.id  hplip_0.9.10.orig.tar.gz.delta  hplip_0.9.10.orig.tar.gz.id  hplip_0.9.11.orig.tar.gz.delta  hplip_0.9.11.orig.tar.gz.id  hplip_0.9.2.orig.tar.gz.delta  hplip_0.9.2.orig.tar.gz.id  hplip_0.9.3.orig.tar.gz.delta  hplip_0.9.3.orig.tar.gz.id  (+199 more)
backend/hp/: .cvsignore  Makefile.am  Makefile.in  configure  configure.in  hp.c
base/: .cvsignore  Makefile.am  Makefile.in  __init__.py  async.py  async_qt.py  codes.py  configure  configure.in  database.py  dcheck.py  device.py  distros.py  g.py  imagesize.py  kirbybase.py  ldif.py  logger.py  magic.py  maint.py  mfpdtf.py  mfpdtf2.py  models.py  msg.py  password.py  pkit.py  pml.py  service.py  slp.py  status.py  strings.py  subproc.py  tui.py  utils.py  validation.py  vcard.py
data/: Makefile.am  Makefile.in  configure  configure.in
data/images/: images.tgz  out1.pnm  out2.pnm  out22.pnm  out3.pnm  out4.pnm  out5.pnm
data/ldl/: cb2pcal.ldl  cb2pcal_done.ldl  cbbcal.ldl  cbccal.ldl  cbccal_done.ldl  cbcpcal.ldl  cbpcal.ldl
data/pcl/: align1_8xx.pcl  align1_9xx.pcl  align2_8xx.pcl  align2_9xx.pcl  align3_8xx.pcl  align3_9xx.pcl  align4_450.pcl  align4_8xx.pcl  align5_8xx.pcl  align6_450.pcl  colorcal2_450.pcl  crbcal.pcl  crcaldone.pcl  crcbcal.pcl  crccal.pcl  crcpcal.pcl  crpcal.pcl
data/ps/: testpage.ps
data/xml/: HPLIP-0.9.6.xml  HPLIP-0.9.7.xml  HPLIP-02-2006.xml  HPLIP-03-2006.xml  HPLIP-05-2006.xml  HPLIP-06-2006.xml  HPLIP-07-2006.xml  HPLIP-08-2006.xml  HPLIP-0_9_11.xml  HPLIP-0_9_5.xml  HPLIP-0_9_6.xml  HPLIP-0_9_7.xml  HPLIP-0_9_8.xml  HPLIP-0_9_9.xml  HPLIP-1_6_10.xml  HPLIP-1_6_6.xml  HPLIP-1_6_7.xml  HPLIP-1_6_8.xml  HPLIP-1_6_9.xml  models.xml  unsupported.xml
io/hpiod/: Makefile.am  Makefile.in  channel.cpp  channel.h  comp.cpp  configure  configure.in  device.cpp  device.h  dot4.cpp  dot4.h  hpiod.cpp  hpiod.h  jddevice.cpp  jetdirect.cpp  mlc.cpp  mlc.h  pp.cpp  ppdevice.cpp  ppdot4.cpp  system.cpp  system.h  udevice.cpp  uppdevice.cpp  usbext.c  usbext.h
ip/: Makefile.am  Makefile.in  configure  configure.in  hpip.h  ipdefs.h  ipmain.c  xjpg_fix.c  xpnm.c  xtiff.c
pcard/: Makefile.am  Makefile.in  __init__.py  configure  configure.in  fat.c  fat.h  photocard.py  ptest.c
pcard/pcardext/: pcardext.c  setup.py
prnt/: .cvsignore  Makefile.am  Makefile.in  __init__.py  colorcal.py  configure  configure.in  cups.py  ldl.py  pcl.py  printable_areas.py
prnt/backend/: hp.c
prnt/cupsext/: cupsext.c  setup.py
prnt/drv/: hpcups.drv.in  hpcups.drv.in.template  hpijs.drv.in  hpijs.drv.in.template  hplip_media.defs
prnt/filters/: hpps
prnt/hpcups/: Compressor.cpp  HPCupsFilter.cpp  HPCupsFilter.h  LJZjStream.cpp  Pcl3Gui2.cpp  Pcl3Gui2.h  SystemServices.cpp  genPCLm.cpp
prnt/hpijs/: .cvsignore  COPYING  Makefile.am  Makefile.in  apollo21xx.cpp  apollo2560.cpp  apollo2xxx.cpp  apollo2xxx.h  breaks_open.cpp  bug.h  colormatch.cpp  colormatch.h  colormatcher_open.cpp  colormatcher_open.h  compression.cpp  config.h  configure  configure.in  context.cpp  context.h  context2.cpp  creator.cpp  dj3320.cpp  dj3320.h  dj3320_cmap.cpp  dj350.cpp  dj350.h  dj3600.cpp  dj3600.h  dj3600_cmap.cpp  dj400.h  dj4100.h  dj540.cpp  dj540.h  dj55xx.h  dj600.cpp  dj600_maps.cpp  dj630.cpp  dj630.h  dj660.cpp  (+77 more)
prnt/hpps/: hppsfilter.c
prnt/ps/: hp-business_inkjet_2250-ps.ppd  hp-business_inkjet_2280-ps.ppd  hp-business_inkjet_2300-ps.ppd  hp-business_inkjet_2600-ps.ppd  hp-business_inkjet_2800-ps.ppd  hp-business_inkjet_3000-ps.ppd  hp-cm8050_mfp_with_edgeline-ps.ppd  hp-cm8060_mfp_with_edgeline-ps.ppd  hp-color_designjet_xl_3600-ps.ppd  hp-color_laserjet-ps.ppd  hp-color_laserjet_2500-ps.ppd  hp-color_laserjet_2500_series-ps.ppd  hp-color_laserjet_2550_series-ps.ppd  hp-color_laserjet_2605-ps.ppd  hp-color_laserjet_2605dn-ps.ppd  hp-color_laserjet_2605dtn-ps.ppd  hp-color_laserjet_2700-ps.ppd  hp-color_laserjet_2700n-ps.ppd  hp-color_laserjet_2800-ps.ppd  hp-color_laserjet_2820-ps.ppd  hp-color_laserjet_2830-ps.ppd  hp-color_laserjet_2840-ps.ppd  hp-color_laserjet_3000-ps.ppd  hp-color_laserjet_3700-ps.ppd  hp-color_laserjet_3700n-ps.ppd  hp-color_laserjet_3800-ps.ppd  hp-color_laserjet_4500-ps.ppd  hp-color_laserjet_4550-ps.ppd  hp-color_laserjet_4600-ps.ppd  hp-color_laserjet_4600_series-ps.ppd  hp-color_laserjet_4610-ps.ppd  hp-color_laserjet_4650-ps.ppd  hp-color_laserjet_4700-ps.ppd  hp-color_laserjet_4730mfp-ps.ppd  hp-color_laserjet_5500-ps.ppd  hp-color_laserjet_5550-ps.ppd  hp-color_laserjet_5m-ps.ppd  hp-color_laserjet_8500-ps.ppd  hp-color_laserjet_8550-ps.ppd  hp-color_laserjet_9500-ps.ppd  (+354 more)
scan/: .cvsignore  Makefile.am  Makefile.in  __init__.py  configure  configure.in  pml_scanner.py  sane.py  scanner.py  scl.py  scl_scanner.py
scan/sane/: Makefile.am  Makefile.in  aclocal.m4  (+27 more)
ui/: .cvsignore  Makefile.am  Makefile.in  __init__.py  aboutdlg.py  aboutdlg_base.py  aboutdlg_base.ui  advancedinfoform.py  advancedinfoform_base.py  align10form.py  alignform.py  aligntype6form1.py  aligntype6form1_base.py  aligntype6form2.py  aligntype6form2_base.py  bothpensrequiredform.py  bothpensrequiredform_base.py  choosedevicedlg.py  chooseprinterdlg.py  cleaningform.py  cleaningform2.py  cleaningform2_base.py  cleaningform_base.py  cleaningform_base.ui  coloradjform.py  coloradjform_base.py  coloradjform_base.ui  colorcal4form.py  colorcalform.py  colorcalform2.py  colorcalform2_base.py  colorcalform2_base.ui  colorcalform_base.py  colorcalform_base.ui  configure  configure.in  coverpageform.py  coverpageform_base.py  coverpageform_base.ui  devmgr4.py  (+77 more)
(+3425 files in other folders)
